--- a/Codigo/Clase2/index.html
+++ b/Codigo/Clase2/index.html
@@ -54,6 +54,10 @@
           <li>Deontay Wilder</li>
         </ol>
       </section>
+      <img src="" alt="">
     </main>
+    <footer>
+      <p>footer</p>
+    </footer>
   </body>
 </html>
