--- a/Codigo/Clase7/index.html
+++ b/Codigo/Clase7/index.html
@@ -7,17 +7,24 @@
     <title>Document</title>
   </head>
   <body>
-    <img src="./img/face.webp" alt="logo" />
-    <p>Hola Mundo</p>
-    <p>Hola Mundo</p>
-    <span>SHOP</span>
-    <span>CONTACTO</span>
-    <span>LOGIN</span>
+    <div>
+      <p>Hola Mundo</p>
+      <p class="invisible">Hola Mundo</p>
+      <span>Hola Mundo</span>
+      <span>Hola Mundo</span>
+      <ul>
+        <li>
+          <a href="">HOME</a>
+        </li>
+        <li>
+          <a href="">CONTACTO</a>
+        </li>
+        <li>
+          <a href="">ACERCA DE</a>
+        </li>
+      </ul>
+    </div>
 
-    <ul>
-      <li><a href=""> SHOP</a></li>
-      <li><a href=""> CONTACTO</a></li>
-      <li><a href=""> LOGIN</a></li>
-    </ul>
+
   </body>
 </html>
